# smartac-timer

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  runserver.py  settings.py.sample  smartac_timer.py
plasma-widget/: metadata.desktop
plasma-widget/contents/ui/: main.qml
smartac_timer/: main.py  wsgi.py
smartac_timer/static/: index.js  pwa.webmanifest  service-worker.js
smartac_timer/templates/: index.html
static/: index.html  index.js
