[tool.poetry]
name = "smartac-timer"
version = "0.1.0"
description = "A timer for your thinkeco Smart AC"
authors = ["Remi Rampin <remirampin@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
requests = "*"
unix-at = ">=1.0"
Flask = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
