[tool.poetry]
name = "smartac-timer"
version = "0.2.0"
description = "A timer for your thinkeco Smart AC"
authors = ["Remi Rampin <remirampin@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
starlette = "^0.13"
aiohttp = "3"
gunicorn = "^20"
aiofiles = "^0.5"

[tool.poetry.dev-dependencies]
uvicorn = "^0.11"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
